[package]
name = "telegram_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
convert_case = "0.6.0"
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
serde-aux = "4.0.0"
serde_json = "1.0.87"
void = "1.0.2"
cloudinary = {path = "/Users/Lurk/src/pets/cloudinary_rs"}
tokio = {version = "1.21.2", features = ["full"]}
dotenv = "0.15.0"
futures = "0.3.25"
slug = "0.1.4"
